# bacterial-gan-augmentation

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  IMPLEMENTATION_STATUS.md  INSTALLATION.md  Makefile  QUICK_START.md  README.md  pyproject.toml  requirements.txt
app/: main.py
configs/: config.yaml  yolo_deep_dataset.yaml
scripts/: README.md  analyze_critic_drift.py  balance_data.py  cleanup.sh  diagnose_cli.sh  explore_dataset.py  fix_tensorflow_qemu.sh  generate_loss_graph.py  generate_samples.py  inference_hd.py  organize_640dataset.py  organize_dataset.py  prepare_data.py  run_evaluation.py  run_training.py  search_similar_images.py  setup.sh  test_architecture.py  test_data_pipeline.py  train_yolo.py
src/bacterial_gan/: __init__.py  cli.py  config.py  constants.py  utils.py
src/bacterial_gan/data/: data_processing.py  dataset.py
src/bacterial_gan/models/: __init__.py  architecture.py  gan_wrapper.py  losses.py  stylegan2_ada.py  stylegan2_wrapper.py
src/bacterial_gan/pipelines/: evaluate_pipeline.py  generate_data_pipeline.py  train_pipeline.py
src/bacterial_gan/utils/: __init__.py  helpers.py  memory_optimization.py  normalization.py  reduce_dataset.py
tests/: test_architecture.py  test_data_pipeline.py  test_data_processing.py  test_training.py
yolo_detection/: README.md
yolo_detection/configs/: yolo_detection_dataset.yaml
yolo_detection/data/: DetectionDataSet
yolo_detection/scripts/: run_yolo_examples.sh  train_yolo.py  yolo_inference.py
